[gd_scene load_steps=4 format=2]

[ext_resource path="res://juegodetriangulos/res/sprites/enemigomagenta.png" type="Texture" id=1]
[ext_resource path="res://juegodetriangulos/res/scripts/levels/level1/level1_enemy.gd" type="Script" id=2]
[ext_resource path="res://juegodetriangulos/res/sprites/ plain_light.png" type="Texture" id=3]

[node name="enemy" type="KinematicBody2D"]
position = Vector2( 82.0464, 76.2463 )
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )
BASE_SPEED = 250
HIT_DELAY = 1.0
MOVE_DELAY = 5.0
SPAWN_PAWN_DELAY = 1.0

[node name="hitbox" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -29.8082, 24.997, 1.8903, 24.8664, 2.24385, -10.4889, 29.821, -21.0955, 29.4675, -24.9846, -30.0019, -24.7869 )

[node name="graphics" type="Sprite" parent="hitbox"]
position = Vector2( 0.0839615, 0.0744247 )
scale = Vector2( 1.21081, 1 )
texture = ExtResource( 1 )

[node name="attack_delay" type="Timer" parent="."]

[node name="movement_delay" type="Timer" parent="."]

[node name="readd_spawner_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="hud" type="CanvasLayer" parent="."]

[node name="health" type="Label" parent="hud"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="light" type="Light2D" parent="."]
texture = ExtResource( 3 )
texture_scale = 2.0

[connection signal="timeout" from="attack_delay" to="." method="_on_attack_delay_timeout"]
[connection signal="timeout" from="movement_delay" to="." method="_on_movement_delay_timeout"]
[connection signal="timeout" from="readd_spawner_timer" to="." method="_on_readd_spawner_timer_timeout"]
